--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ title: "About"
     <div class="page">
         <h1 class="page-title">{{ page.title }}</h1>
         <a href="{{ site.twitter }}" target="_blank">
-            <img src="{{ site.github.owner_gravatar_url }}?s=142" height="50" width="50" />
+            <img src="images/kingsor_profile.jpeg" height="50" width="50" />
         </a>
         <p class="lead">
             I'm a software developer living in Milan, Italy.  This is the place where I collect stuff I’m interested in.
