update 404 page and add archive section

--- a/404.html
+++ b/404.html
@@ -1,11 +1,24 @@
 ---
 layout: default
 title: "404: Page not found"
+description: "Could not find what you are looking for! 404: Page not found error."
 ---
 
 <section class="content container">
-    <div class="page">
-        <h1 class="page-title">{{ page.title }}</h1>
-        <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="/">Head back home</a> to try finding it again.</p>
+  <div class="row">
+    <div class="col-md-12 text-center" >
+      <span style="font-size:80px;">404</span>
     </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12 text-center" >
+      <span style="font-size:80px;">Page not found!!</span>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12 text-center">
+      <p style="font-size: 24px">Looks like the page you're trying to visit doesn't exist.<br />Please check the URL and try your luck again.</p>
+      <p style="font-size: 24px">You can also go back to the <a href="/">home page</a></p>
+    </div>
+  </div>
 </section>
